--- a/custom-hooks/index.html
+++ b/custom-hooks/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" />
+    <meta name="author" content="Karl Johnson" />
+    <meta
+      name="description"
+      content="Karl Johnson's submission for PS 2025-RTT-30 Lab 10.2: Custom Hooks Implementation." />
+    <title>Lab 10.2: Custom Hooks Implementation</title>
   </head>
   <body>
     <div id="root"></div>
